--- a/app/src/main/res/layout/sign_in_fragment.xml
+++ b/app/src/main/res/layout/sign_in_fragment.xml
@@ -33,10 +33,10 @@
         android:background="@drawable/inputs_background"
         android:hint="@string/email"
         android:inputType="textEmailAddress"
+        android:textColorHighlight="@color/dark_gray"
         android:padding="10dp"
         android:selectAllOnFocus="true"
         android:textColor="@color/colorPrimary"
-        android:textColorHighlight="@color/colorPrimary"
         android:textColorHint="@color/colorPrimary"
         android:textColorLink="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
@@ -55,6 +55,7 @@
         android:inputType="textPassword"
         android:padding="10dp"
         android:selectAllOnFocus="true"
+        android:textColorHighlight="@color/dark_gray"
         android:textColor="@color/colorPrimary"
         android:textColorHint="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
