--- a/app/src/main/res/layout/fragment_post_detail.xml
+++ b/app/src/main/res/layout/fragment_post_detail.xml
@@ -1,19 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    >
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/postdetail_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorPrimary">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/postdetail_go_back"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_back_24dp" />
+
+            <TextView
+                android:id="@+id/postdetail_toolbar_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                tools:text="Username" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text=" Post"
+                android:textColor="@color/white"
+                android:textSize="18sp" />
+
+        </LinearLayout>
+
+    </androidx.appcompat.widget.Toolbar>
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nsv"
         android:layout_width="match_parent"
-        android:paddingBottom="5dp"
         android:layout_height="match_parent"
+        android:layout_above="@id/comments_relative"
+        android:layout_below="@id/postdetail_toolbar"
         android:background="@color/colorPrimary"
-        android:layout_above="@id/comments_relative">
+        android:paddingBottom="5dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -21,8 +59,7 @@
             android:orientation="vertical">
 
 
-            <androidx.cardview.widget.CardView
-                xmlns:app="http://schemas.android.com/apk/res-auto"
+            <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
@@ -44,7 +81,7 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
 
-                        <de.hdodenhof.circleimageview.CircleImageView
+                        <ImageView
                             android:id="@+id/postdetail_user_profile_image"
                             android:layout_width="60dp"
                             android:layout_height="60dp"
@@ -61,8 +98,8 @@
                                 android:id="@+id/postdetail_user_name"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginLeft="5dp"
-                                android:layout_marginTop="14dp"
+                                android:layout_marginStart="5dp"
+                                android:layout_marginTop="5dp"
                                 android:text="user name"
                                 android:textColor="@color/colorPrimaryDark"
                                 android:textSize="16sp"
@@ -72,11 +109,11 @@
                                 android:id="@+id/postdetail_time"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginLeft="5dp"
-                                android:layout_marginTop="5dp"
+                                android:layout_marginStart="5dp"
+                                android:layout_marginTop="2dp"
                                 android:text="time"
                                 android:textColor="@android:color/secondary_text_light"
-                                android:textSize="16sp"
+                                android:textSize="13sp"
                                 android:textStyle="italic" />
                         </LinearLayout>
 
@@ -95,12 +132,12 @@
 
                     <include
                         android:id="@+id/postdetail_countersContainer"
-                        layout="@layout/post_detail_counters_panel"
+                        layout="@layout/layout_post_detail_counters_panel"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/intrinsic_padding"
                         android:layout_marginTop="5dp"
-                        android:layout_marginRight="@dimen/intrinsic_padding"
-                        android:layout_marginLeft="@dimen/intrinsic_padding" />
+                        android:layout_marginRight="@dimen/intrinsic_padding" />
 
                     <RelativeLayout
                         android:layout_width="match_parent"
@@ -110,8 +147,8 @@
                             android:id="@+id/postdetail_like_text"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="10dp"
                             android:layout_centerVertical="true"
+                            android:layout_marginStart="10dp"
                             android:text="0 likes"
                             android:textAppearance="@style/TextAppearance.Second" />
 
@@ -136,21 +173,17 @@
                 android:id="@+id/recycler_view_comments"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="3dp"
+                android:layout_marginEnd="5dp"
                 android:background="@color/primaryColor"
                 tools:listitem="@layout/item_layout_comment"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"
-                android:layout_marginTop="3dp"
 
                 />
-
-
-
 
         </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
-
 
     <RelativeLayout
         android:id="@+id/comments_relative"
@@ -160,7 +193,7 @@
         android:background="#fff"
         android:padding="4dp">
 
-        <de.hdodenhof.circleimageview.CircleImageView
+        <ImageView
             android:id="@+id/profile_image_comment"
             android:layout_width="40dp"
             android:layout_height="40dp"
@@ -174,22 +207,31 @@
             android:layout_centerVertical="true"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
-            android:layout_toLeftOf="@id/post_comment"
-            android:layout_toRightOf="@id/profile_image_comment"
+            android:layout_toStartOf="@id/post_comment"
+            android:layout_toEndOf="@id/profile_image_comment"
             android:hint="comment..."
             android:padding="8dp" />
 
-        <ImageButton
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/post_comment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:background="@drawable/ic_menu_send"
             android:layout_marginEnd="6dp"
-            android:textColor="@color/colorPrimary"
-            android:textSize="20dp"
-            android:textStyle="bold" />
+            android:background="@drawable/ic_menu_send"
+            android:backgroundTint="#FFFFFF"
+            android:elevation="0dp"
+
+            android:src="@drawable/ic_menu_send"
+            app:backgroundTint="#00FFFFFF"
+            app:elevation="0dp"
+
+
+            app:fabSize="mini"
+            app:rippleColor="@color/dark_gray" />
+
+
     </RelativeLayout>
 
 
