--- a/app/src/main/res/layout/fragment_profile_setting.xml
+++ b/app/src/main/res/layout/fragment_profile_setting.xml
@@ -73,7 +73,7 @@
 
                 </com.google.android.material.appbar.AppBarLayout>
 
-                <de.hdodenhof.circleimageview.CircleImageView
+                <ImageView
                     android:id="@+id/profile_image_view_setting"
                     android:layout_width="130dp"
                     android:layout_height="130dp"
@@ -102,6 +102,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="15dp"
+                    android:textColorHighlight="@color/dark_gray"
                     android:layout_marginRight="20dp"
                     android:hint="Full Name"
                     android:inputType="text"
@@ -119,6 +120,7 @@
                     android:layout_marginRight="20dp"
                     android:hint="Username"
                     android:inputType="text"
+                    android:textColorHighlight="@color/dark_gray"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/full_name_profile_setting" />
 
@@ -131,7 +133,7 @@
                     android:layout_marginRight="20dp"
                     android:hint="Bio"
                     android:inputType="text"
-
+                    android:textColorHighlight="@color/dark_gray"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/username_profile_setting" />
 
