--- a/app/src/main/res/layout/fragment_show_users.xml
+++ b/app/src/main/res/layout/fragment_show_users.xml
@@ -1,43 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/show_user_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimary">
+        android:background="@color/colorPrimary"
+        android:layout_height="?attr/actionBarSize"
+        app:contentInsetLeft="0dp"
+        app:contentInsetStart="0dp"
+        app:contentInsetStartWithNavigation="0dp"
+        >
 
-        <RelativeLayout
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginStart="6dp">
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/show_users_go_back"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:src="@drawable/ic_back_24dp"
+                android:layout_gravity="center"/>
 
             <TextView
-                android:id="@+id/show_user_toolbar_text"
+                android:id="@+id/show_users_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:maxLines="1"
-                android:textColor="@color/white"
-                android:textSize="18sp"
-                android:textStyle="bold"
                 tools:text="Title"
-
+                android:textSize="18sp"
+                android:textColor="@color/white"
+                android:layout_gravity="center"
                 />
-        </RelativeLayout>
+
+        </LinearLayout>
+
 
     </androidx.appcompat.widget.Toolbar>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/show_user_recyclerview"
+        android:id="@+id/show_users_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/show_user_toolbar"
         android:layout_marginTop="2dp"
         tools:listitem="@layout/item_layout_user"
+        android:paddingBottom="3dp"
 
         />
 
