--- a/app/src/main/res/layout/item_layout_notifications.xml
+++ b/app/src/main/res/layout/item_layout_notifications.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         >
 
-        <de.hdodenhof.circleimageview.CircleImageView
+        <ImageView
             android:id="@+id/profile_image_notification"
             android:layout_width="60dp"
             android:layout_height="60dp"
