4 - Navigation done : BottomNavView bug
Signed-off-by: Xblack97 <xblack97@yahoo.com>

--- a/app/src/main/res/layout/item_layout_post.xml
+++ b/app/src/main/res/layout/item_layout_post.xml
@@ -39,7 +39,7 @@
                     android:id="@+id/post_user_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
+                    android:layout_marginStart="5dp"
                     android:layout_marginTop="14dp"
                     android:text="user name"
                     android:textColor="@color/colorPrimaryDark"
@@ -50,7 +50,8 @@
                     android:id="@+id/post_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
+                    android:layout_marginStart="5dp"
+                    android:padding="5dp"
                     android:layout_marginTop="5dp"
                     android:text="time"
                     android:textColor="@android:color/secondary_text_light"
@@ -73,7 +74,7 @@
 
         <include
             android:id="@+id/countersContainer"
-            layout="@layout/post_counters_panel"
+            layout="@layout/layout_post_counters_panel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
