--- a/app/src/main/res/layout/fragment_post_detail.xml
+++ b/app/src/main/res/layout/fragment_post_detail.xml
@@ -95,7 +95,7 @@
 
                     <include
                         android:id="@+id/postdetail_countersContainer"
-                        layout="@layout/post_detail_counters_panel"
+                        layout="@layout/layout_post_detail_counters_panel"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
@@ -174,8 +174,8 @@
             android:layout_centerVertical="true"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
-            android:layout_toLeftOf="@id/post_comment"
-            android:layout_toRightOf="@id/profile_image_comment"
+            android:layout_toStartOf="@id/post_comment"
+            android:layout_toEndOf="@id/profile_image_comment"
             android:hint="comment..."
             android:padding="8dp" />
 
