--- a/app/src/main/res/layout/fragment_upload.xml
+++ b/app/src/main/res/layout/fragment_upload.xml
@@ -61,21 +61,27 @@
                 app:layout_constraintVertical_bias="0.012" />
 
 
-            <ImageButton
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/upload_post"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="10dp"
-
+                android:layout_marginBottom="15dp"
                 android:background="@drawable/ic_menu_send"
+                android:backgroundTint="#FFFFFF"
+                android:elevation="0dp"
+                android:src="@drawable/ic_menu_send"
+                app:backgroundTint="#00FFFFFF"
+                app:elevation="0dp"
+                android:clickable="false"
 
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.976"
+                app:layout_constraintHorizontal_bias="0.895"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.963" />
+                app:layout_constraintVertical_bias="0.961"
+                app:maxImageSize="45dp"
+                app:rippleColor="@color/dark_gray" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
