--- a/app/src/main/res/layout/item_layout_comment.xml
+++ b/app/src/main/res/layout/item_layout_comment.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginTop="5dp"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     app:cardCornerRadius="8dp"
     app:cardElevation="5dp"
     android:background="@color/white"
@@ -22,7 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginLeft="55dp">
+        android:layout_marginStart="55dp">
 
 
         <TextView
@@ -31,14 +31,38 @@
             android:layout_height="wrap_content"
             android:text="user name"
             android:textSize="16sp"
+            android:textColor="@color/colorPrimaryDark"
             android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/comment_text_comment"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="comment text"
-            android:textSize="16sp" />
+            android:orientation="horizontal"
+            >
+            <TextView
+                android:id="@+id/comment_text_comment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="comment text"
+                android:textSize="16sp"
+                android:textColor="@android:color/secondary_text_light"
+                android:layout_weight="3"
+                />
+
+            <TextView
+                android:id="@+id/comment_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:text="time"
+                android:textSize="16sp"
+                android:textStyle="italic"
+                android:layout_weight="1"
+                />
+
+
+
+        </LinearLayout>
 
     </LinearLayout>
 
