--- a/app/src/main/res/layout/layout_profile_info.xml
+++ b/app/src/main/res/layout/layout_profile_info.xml
@@ -5,16 +5,15 @@
     android:id="@+id/profileInfo"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingLeft="@dimen/intrinsic_padding"
-    android:paddingRight="@dimen/intrinsic_padding"
-    android:paddingTop="@dimen/intrinsic_padding">
+    android:padding="5dp"
+    >
 
     <RelativeLayout
         android:id="@+id/imageContainer"
         android:layout_width="@dimen/profile_screen_avatar_size"
         android:layout_height="@dimen/profile_screen_avatar_size"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="1dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -31,20 +30,20 @@
         android:id="@+id/profile_bio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Bio"
-        android:textSize="13sp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="15dp"
-        app:layout_constraintTop_toBottomOf="@id/imageContainer"
+        android:text="Bio"
+        android:textSize="13sp"
+        app:layout_constraintBottom_toTopOf="@id/followButton"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/followButton" />
+        app:layout_constraintTop_toBottomOf="@id/imageContainer" />
 
     <TextView
         android:id="@+id/profile_fullname"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:gravity="center_horizontal"
         android:padding="0dp"
         android:paddingTop="@dimen/intrinsic_padding"
@@ -59,13 +58,15 @@
         android:id="@+id/postsCounter"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:gravity="center"
         android:padding="@dimen/small_intrinsic_padding"
         android:textAppearance="@style/TextAppearance.Counter"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/followersCounter"
+        app:layout_constraintEnd_toStartOf="@+id/followersCounter"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintStart_toEndOf="@+id/imageContainer"
         app:layout_constraintTop_toBottomOf="@+id/profile_fullname"
         app:layout_constraintVertical_bias="0.098"
@@ -76,17 +77,18 @@
         android:id="@+id/followersCounter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
         android:layout_marginTop="10dp"
         android:gravity="center"
         android:padding="@dimen/small_intrinsic_padding"
-        android:layout_marginStart="5dp"
+        android:text="0 \n followers"
         android:textAppearance="@style/TextAppearance.Counter"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/postsCounter"
-        app:layout_constraintRight_toLeftOf="@id/followingsCounter"
+        app:layout_constraintEnd_toStartOf="@+id/followingsCounter"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/postsCounter"
         app:layout_constraintTop_toBottomOf="@id/profile_fullname"
         app:layout_constraintVertical_bias="0.098"
-        android:text="0 \n followers"
         tools:visibility="visible" />
 
     <TextView
@@ -95,12 +97,15 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:gravity="center"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
         android:padding="@dimen/small_intrinsic_padding"
         android:text="0 \n followings"
         android:textAppearance="@style/TextAppearance.Counter"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/followersCounter"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/followersCounter"
         app:layout_constraintTop_toBottomOf="@id/profile_fullname"
         app:layout_constraintVertical_bias="0.096"
         tools:visibility="visible" />
@@ -109,14 +114,14 @@
         android:id="@+id/followButton"
         android:layout_width="60dp"
         android:layout_height="25dp"
-        android:layout_marginBottom="15dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="16dp"
+        android:layout_marginBottom="15dp"
+        android:background="@drawable/buttons_background_green"
         android:text="follow"
+        android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="12sp"
-        android:textAllCaps="false"
-        android:background="@drawable/buttons_background_green"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profile_bio"
