--- a/app/src/main/res/layout/sign_in_fragment.xml
+++ b/app/src/main/res/layout/sign_in_fragment.xml
@@ -33,11 +33,10 @@
         android:background="@drawable/inputs_background"
         android:hint="@string/email"
         android:inputType="textEmailAddress"
-        android:textColorHighlight="@color/dark_gray"
         android:padding="10dp"
         android:selectAllOnFocus="true"
         android:textColor="@color/colorPrimary"
-        android:textColorHint="@color/colorPrimary"
+        android:textColorHint="@color/dark_gray"
         android:textColorLink="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -55,21 +54,12 @@
         android:inputType="textPassword"
         android:padding="10dp"
         android:selectAllOnFocus="true"
-        android:textColorHighlight="@color/dark_gray"
         android:textColor="@color/colorPrimary"
-        android:textColorHint="@color/colorPrimary"
+        android:textColorHint="@color/dark_gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signin_email" />
 
-    <androidx.legacy.widget.Space
-        android:layout_width="match_parent"
-        android:layout_height="85dp"
-        android:id="@+id/space"
-        app:layout_constraintTop_toBottomOf="@id/signin_password"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        />
 
     <Button
         android:id="@+id/signin"
@@ -77,7 +67,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="start"
         android:layout_marginStart="48dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="80dp"
         android:layout_marginEnd="48dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/buttons_background_white_stroke"
@@ -90,7 +80,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/space"
+        app:layout_constraintTop_toBottomOf="@+id/signin_password"
         app:layout_constraintVertical_bias="0.444" />
 
     <Button
