--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -7,9 +7,7 @@
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar_layout_search"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        >
+        android:layout_height="wrap_content">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/search_toolbar"
@@ -19,9 +17,7 @@
             android:layout_marginTop="4dp"
             android:layout_marginRight="6dp"
             android:layout_marginBottom="6dp"
-            android:background="@drawable/buttons_background_white_stroke"
-
-            >
+            android:background="@drawable/buttons_background_white_stroke">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -34,7 +30,6 @@
                     android:layout_centerVertical="true"
                     android:layout_marginTop="5dp"
                     android:src="@drawable/ic_search_white_24dp"
-
                     />
 
                 <EditText
@@ -56,10 +51,7 @@
                     android:textColorHint="@color/white"
                     android:theme="@style/SearchEditText"
                     android:textSize="17sp"
-
-
                     />
-
 
             </RelativeLayout>
         </androidx.appcompat.widget.Toolbar>
@@ -72,10 +64,5 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/app_bar_layout_search"
         android:visibility="gone"
-        tools:listitem="@layout/item_layout_user">
-
-
-    </androidx.recyclerview.widget.RecyclerView>
-
-
+        tools:listitem="@layout/item_layout_user"/>
 </RelativeLayout>
