--- a/app/src/main/res/layout/item_layout_post.xml
+++ b/app/src/main/res/layout/item_layout_post.xml
@@ -52,6 +52,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
                     android:layout_marginTop="2dp"
+                    android:padding="5dp"
                     android:text="time"
                     android:textColor="@android:color/secondary_text_light"
                     android:textSize="13sp"
