--- a/app/src/main/res/layout/sign_up_fragment.xml
+++ b/app/src/main/res/layout/sign_up_fragment.xml
@@ -33,8 +33,7 @@
             android:padding="10dp"
             android:selectAllOnFocus="true"
             android:textColor="@color/colorPrimary"
-            android:textColorHighlight="@color/dark_gray"
-            android:textColorHint="@color/colorPrimary"
+            android:textColorHint="@color/dark_gray"
             app:layout_constraintBottom_toTopOf="@+id/signup_username"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -53,9 +52,8 @@
             android:inputType="text"
             android:padding="10dp"
             android:selectAllOnFocus="true"
-            android:textColorHighlight="@color/dark_gray"
+            android:textColorHint="@color/dark_gray"
             android:textColor="@color/colorPrimary"
-            android:textColorHint="@color/colorPrimary"
             app:layout_constraintBottom_toTopOf="@+id/signup_email"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -73,9 +71,8 @@
             android:inputType="textEmailAddress"
             android:padding="10dp"
             android:selectAllOnFocus="true"
-            android:textColorHighlight="@color/dark_gray"
             android:textColor="@color/colorPrimary"
-            android:textColorHint="@color/colorPrimary"
+            android:textColorHint="@color/dark_gray"
             android:textColorLink="@color/colorPrimary"
             app:layout_constraintBottom_toTopOf="@+id/signup_password"
             app:layout_constraintEnd_toEndOf="parent"
@@ -94,9 +91,8 @@
             android:inputType="textPassword"
             android:padding="10dp"
             android:selectAllOnFocus="true"
-            android:textColorHighlight="@color/dark_gray"
+            android:textColorHint="@color/dark_gray"
             android:textColor="@color/colorPrimary"
-            android:textColorHint="@color/colorPrimary"
             app:layout_constraintBottom_toTopOf="@+id/signup_confirm_password"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -114,24 +110,15 @@
             android:hint="@string/confirm_password"
             android:inputType="textPassword"
             android:padding="10dp"
-            android:textColorHighlight="@color/dark_gray"
             android:selectAllOnFocus="true"
             android:textColor="@color/colorPrimary"
-            android:textColorHint="@color/colorPrimary"
-            app:layout_constraintBottom_toTopOf="@+id/space"
+            android:textColorHint="@color/dark_gray"
+            app:layout_constraintBottom_toTopOf="@+id/signup"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/signup_password" />
 
-
-        <androidx.legacy.widget.Space
-            android:id="@+id/space"
-            android:layout_width="match_parent"
-            android:layout_height="70dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/signup_confirm_password" />
 
 
         <Button
@@ -140,9 +127,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:layout_marginStart="48dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="80dp"
+            android:layout_marginBottom="30dp"
             android:layout_marginEnd="48dp"
-            android:layout_marginBottom="15dp"
             android:background="@drawable/buttons_background_white_stroke"
             android:text="@string/sign_up"
             android:textAllCaps="false"
@@ -151,7 +138,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/space"
+            app:layout_constraintTop_toBottomOf="@+id/signup_confirm_password"
             app:layout_constraintVertical_bias="0.843" />
 
         <Button
@@ -160,7 +147,6 @@
             android:layout_height="wrap_content"
             android:layout_gravity="start"
             android:layout_marginStart="48dp"
-            android:layout_marginTop="20dp"
             android:layout_marginEnd="48dp"
             android:layout_marginBottom="20dp"
             android:background="@drawable/buttons_background_white"
