--- a/app/src/main/res/layout/sign_up_fragment.xml
+++ b/app/src/main/res/layout/sign_up_fragment.xml
@@ -34,6 +34,7 @@
             android:selectAllOnFocus="true"
             android:textColor="@color/colorPrimary"
             android:textColorHint="@color/dark_gray"
+            android:textColorHighlight="@color/dark_gray"
             app:layout_constraintBottom_toTopOf="@+id/signup_username"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -53,6 +54,7 @@
             android:padding="10dp"
             android:selectAllOnFocus="true"
             android:textColorHint="@color/dark_gray"
+            android:textColorHighlight="@color/dark_gray"
             android:textColor="@color/colorPrimary"
             app:layout_constraintBottom_toTopOf="@+id/signup_email"
             app:layout_constraintEnd_toEndOf="parent"
@@ -73,6 +75,7 @@
             android:selectAllOnFocus="true"
             android:textColor="@color/colorPrimary"
             android:textColorHint="@color/dark_gray"
+            android:textColorHighlight="@color/dark_gray"
             android:textColorLink="@color/colorPrimary"
             app:layout_constraintBottom_toTopOf="@+id/signup_password"
             app:layout_constraintEnd_toEndOf="parent"
@@ -92,6 +95,7 @@
             android:padding="10dp"
             android:selectAllOnFocus="true"
             android:textColorHint="@color/dark_gray"
+            android:textColorHighlight="@color/dark_gray"
             android:textColor="@color/colorPrimary"
             app:layout_constraintBottom_toTopOf="@+id/signup_confirm_password"
             app:layout_constraintEnd_toEndOf="parent"
@@ -113,6 +117,7 @@
             android:selectAllOnFocus="true"
             android:textColor="@color/colorPrimary"
             android:textColorHint="@color/dark_gray"
+            android:textColorHighlight="@color/dark_gray"
             app:layout_constraintBottom_toTopOf="@+id/signup"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
