--- a/app/src/main/res/layout/fragment_starred_post.xml
+++ b/app/src/main/res/layout/fragment_starred_post.xml
@@ -50,7 +50,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_star"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/app_bar_layout_star"
         android:background="@color/primaryColor"
         android:paddingBottom="5dp"
@@ -65,6 +65,8 @@
         android:layout_centerInParent="true"
         android:text="All caught up..."
         android:textColor="@color/dark_gray"
+        android:textSize="28sp"
+        android:textStyle="italic"
         android:visibility="gone"/>
 
 </RelativeLayout>
