--- a/app/src/main/res/layout/fragment_upload.xml
+++ b/app/src/main/res/layout/fragment_upload.xml
@@ -37,7 +37,7 @@
                 android:maxWidth="300dp"
                 android:padding="5dp"
                 android:textColorHighlight="@color/dark_gray"
-                android:textColorHint="@color/dark_gray"
+                android:textColorHint="@color/primaryColor"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.024"
