--- a/app/src/main/res/layout/layout_profile_info.xml
+++ b/app/src/main/res/layout/layout_profile_info.xml
@@ -70,7 +70,7 @@
         app:layout_constraintStart_toEndOf="@+id/imageContainer"
         app:layout_constraintTop_toBottomOf="@+id/profile_fullname"
         app:layout_constraintVertical_bias="0.098"
-        tools:text="0 \n posts"
+        android:text="0 \n posts"
         tools:visibility="visible" />
 
     <TextView
