8 - implement image support
Signed-off-by: Xblack97 <xblack97@yahoo.com>

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,8 +37,7 @@
             app:layout_constraintRight_toRightOf="parent"
             android:layout_gravity="bottom"
             app:menu="@menu/bottom_nav_menu"
-
-            app:layout_behavior=".activities.MainActivity$BottomNavigationBehavior"
+            app:layout_behavior=".utils.BottomNavigationBehavior"
 
             />
 
