--- a/app/src/main/res/layout/fragment_upload.xml
+++ b/app/src/main/res/layout/fragment_upload.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginBottom="?attr/actionBarSize"
@@ -24,50 +25,88 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <EditText
-                android:id="@+id/post_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="0dp"
+                android:layout_height="0dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="70dp"
-                android:layout_marginBottom="8dp"
-                android:background="@null"
-                android:hint="@string/upload_hint"
-                android:maxWidth="300dp"
-                android:padding="5dp"
-                android:textColorHighlight="@color/dark_gray"
-                android:textColorHint="@color/primaryColor"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.024"
+                android:layout_marginEnd="10dp"
+                app:layout_constraintBottom_toTopOf="@id/upload_post_images"
+                app:layout_constraintEnd_toStartOf="@+id/camera_btn"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.025" />
+                >
+
+                <EditText
+                    android:id="@+id/post_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@null"
+                    android:hint="@string/upload_hint"
+                    android:padding="5dp"
+                    android:textColorHighlight="@color/dark_gray"
+                    android:textColorHint="@color/primaryColor"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.024"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.025" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
             <ImageButton
-                android:id="@+id/camera"
-                android:layout_width="43dp"
-                android:layout_height="42dp"
+                android:id="@+id/camera_btn"
+                android:layout_width="30dp"
+                android:layout_height="32dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"
-                android:background="@drawable/ic_add_a_photo_black_24dp"
+                android:background="@drawable/ic_menu_camera"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.975"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.012"/>
+
+            <ImageButton
+                android:id="@+id/gallery_btn"
+                android:layout_width="30dp"
+                android:layout_height="32dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="8dp"
+                android:background="@drawable/ic_image"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/camera_btn"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.975"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintVertical_bias="0.012" />
 
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/upload_post_images"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintBottom_toTopOf="@+id/upload_post_btn"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/camera_btn"
+                app:layout_constraintVertical_bias="1.0"
+                tools:listitem="@layout/item_layout_post_images"
+                />
+
             <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/upload_post"
+                android:id="@+id/upload_post_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="15dp"
-                android:background="@drawable/ic_menu_send"
                 android:backgroundTint="#FFFFFF"
                 android:elevation="0dp"
                 android:src="@drawable/ic_menu_send"
